--- a/amvera.yml
+++ b/amvera.yml
@@ -7,7 +7,6 @@ build:
   requirementsPath: requirements.txt
   useCache: true
 run:
-  scriptName: start.sh
-  command: ""
+  command: "python manage.py migrate --noinput && python manage.py collectstatic --noinput && gunicorn project.wsgi:application --bind 0.0.0.0:8000 --workers 2"
   persistenceMount: /data
   containerPort: "8000"
